Upgrade JavaFX dependencies to version 21 for Java 21 compatibility